<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_summary"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/summary" />
        <item
            android:id="@+id/nav_experience"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_drawer_experience_item" />
        <item
            android:id="@+id/nav_education"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_drawer_education_item" />
        <item
            android:id="@+id/nav_certificates"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_drawer_certificates_item" />
        <item
            android:id="@+id/nav_skills"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_drawer_skills_item" />
    </group>

    <item android:title="@string/nav_drawer_communicate_menu_item">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_drawer_contact_item" />
        </menu>
    </item>

</menu>
